@@ -98,3 +98,12 @@ publishing {
         }
     }
 }
+
+run {
+    minHeapSize = "768m"
+    maxHeapSize = "768m"
+    if(!isJava8Compatible) {
+      jvmArgs -XX:MaxPermSize=256m
+    }
+    jvmArgs "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1", "-Dsun.reflect.inflationThreshold=100000", "-XX:BiasedLockingStartupDelay=0", "-XX:StarvationMonitorInterval=5000", "-XX:Tier0ProfilingStartPercentage=500"
+}
